# metric-watchdog

./: .dockerignore  .gitignore  DockerFile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh  test_text_pipeline.py
agents/: .gitignore  diagnosis_agent.py  narrator_agent.py  orchestrator.py  reader_agent.py  reasoning_agent.py
api/: main.py  schemas.py
config/: schedule.yml  settings.py
core/: db.py  history_store.py  idempotency.py  llm.py  model_router.py  models.py  run_logger.py  scheduler.py  schema.py  token_budget.py  vision.py
data/: schema.sql  seed.py
db/: briefing_watchdog_20260604_1602.html  test_briefing.html
delivery/: email_sender.py  slack_sender.py
guardrails/: degradation.py  input_guard.py  output_guard.py
observability/: alerts.py  metrics.py  tracer.py
tests/evals/: fixtures.py  last_run.json  llm_judge.py  run_evals.py  test_diagnosis.py  test_narrator.py  test_pipeline.py  test_reader.py  test_reasoning.py
ui/: app.py
