[project]
name = "metric-watchdog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "apscheduler>=3.11.2",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "jinja2>=3.1.6",
    "kaleido>=1.3.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
